# NanoDet

./: CMakeLists.txt  README.md
include/: NanoDet.hpp  types.hpp
models/: nanodet-plus_320_uint8_tmfile
src/: NanoDet.code-workspace  NanoDet.cpp  main.cpp  timer.cc
